--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "css-clean",
-  "main": "./lib/css-clean",
+  "main": "main.js",
   "version": "1.4.0",
   "description": "A package for sorting and aligning CSS and SASS.",
   "keywords": [],
   "activationCommands": {
     "atom-workspace": "css-clean:convert"
+  },
+  "scripts": {
+    "jshint": "jshint"
   },
   "repository": "https://github.com/SeanJM/css-clean",
   "license": "MIT",
@@ -16,8 +19,11 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "jshint": "^2.9.1",
+    "lasso-string": "^3.4.13",
+    "match-file-utility": "^1.3.0"
   }
 }
