--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lasso-string": "^3.47.0"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
@@ -31,7 +33,7 @@
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "jshint": "^2.9.1",
-    "lasso-string": "^3.4.13",
+    "lasso-string": "2.48.0",
     "match-file-utility": "^1.3.0"
   }
 }
