--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
-    "lasso-string": "3.48.0"
+    "lasso-string": "^5.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -33,7 +33,7 @@
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "jshint": "^2.9.1",
-    "lasso-string": "2.48.0",
+    "lasso-string": "^5.0.0",
     "match-file-utility": "^1.3.0"
   }
 }
