--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atom-css-clean",
+  "name": "css-clean",
   "main": "main.js",
   "version": "2.19.1",
   "description": "A package for sorting and aligning CSS and SASS.",
